# lock_box_backend

./: .gitignore  Cargo.toml
src/: db.rs  main.rs
src/dtos/: group_dto.rs  mod.rs  user_dto.rs
src/endpoints/: admin_endpoints.rs  group_endpoints.rs  mod.rs  storage_endpoints.rs  user_endpoints.rs
src/entities/: group_user.rs  group_video.rs  groups.rs  mod.rs  prelude.rs  users.rs  videos.rs
src/services/: auth_service.rs  group_service.rs  hash_service.rs  mod.rs  storage_service.rs  user_service.rs
