[package]
name = "LockBox"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-multipart = "0.7.2"
serde = { version = "1.0.217", features = ["derive"]}
serde_json = "1.0.138"
dotenv = "0.15.0"
tokio = {version = "1.43.0", features = ["full"]}
sea-orm = { version = "1.1.4", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid"]}
log = "0.4.25"
argon2-async = "0.2.0"
tokio-retry = "0.3.0"
actix-jwt-auth-middleware = "0.5.0"
jwt-compact = "0.8.0"
jsonwebtoken = "9.3.1"
env_logger = "0.11.6"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.76.0"
aws-smithy-types = "1.2.13"
aws-smithy-runtime = "1.7.8"
aws-smithy-runtime-api = "1.7.3"
nanoid = "0.4.0"
futures-util = "0.3.31"
shuttle-actix-web = "0.52.0"
shuttle-runtime = "0.52.0"
